# procedural-placement-lib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
assets/: heightmap.json
assets/shaders/: heightmap.comp  phong.frag  phong.vert  phong_terrain.frag
example/: 01-basic-placement.cpp  02-basic-visualization.cpp  03-interactive-placement.cpp  04-scene.cpp  04b-cpu-scene.cpp  CMakeLists.txt  cpu-placement.cpp  cpu-placement.hpp  example-common.cpp  example-common.hpp
example/common/: camera_controller.cpp  camera_controller.hpp  glfw_wrapper.cpp  glfw_wrapper.hpp  imgui_wrapper.cpp  imgui_wrapper.hpp  load_obj.cpp  load_obj.hpp  scoped_timer.hpp
include/: generation_kernel.hpp  placement.hpp  reduction_kernel.hpp  world_data.hpp
include/placement/: compute_kernel.hpp  density_map.hpp  generation_kernel.hpp  gl_types.hpp  placement.hpp  placement_pipeline.hpp  placement_pipeline_kernel.hpp  placement_result.hpp  reduction_kernel.hpp  ssb_proxy.hpp
include/placement/kernel/: compute_kernel.hpp  copy_kernel.hpp  evaluation_kernel.hpp  generation_kernel.hpp  indexation_kernel.hpp
lib/: CMakeLists.txt
src/: CMakeLists.txt  compute_kernel.cpp  disk_distribution_generator.cpp  disk_distribution_generator.hpp  generation_kernel.cpp  generation_kernel.hpp  gl_context.cpp  gl_context.hpp  placement.cpp  placement_pipeline.cpp  placement_pipeline_kernel.cpp  placement_result.cpp  placement_result.hpp  reduction_kernel.cpp  reduction_kernel.hpp  ssb_proxy.cpp  world_data.cpp
src/kernels/: compute_kernel.cpp  copy_kernel.cpp  copy_kernel.hpp  evaluation_kernel.cpp  evaluation_kernel.hpp  generation_kernel.cpp  generation_kernel.hpp  indexation_kernel.cpp  indexation_kernel.hpp
test/: CMakeLists.txt  ostream_operators.hpp  tests.cpp
